tests/baselines/reference/arrayLiteralAndArrayConstructorEquivalence1.errors.txt
arrayLiteralAndArrayConstructorEquivalence1.ts(3,22): error TS2314: Generic type 'Array<T>' requires 1 type argument(s).


==== arrayLiteralAndArrayConstructorEquivalence1.ts (1 errors) ====
    var myCars=new Array(); 
    var myCars3 = new Array({});
    declare var myCars4: Array; // error
                         ~~~~~
!!! error TS2314: Generic type 'Array<T>' requires 1 type argument(s).
    declare var myCars5: Array<any>[];
     
    myCars = myCars3;
    myCars = myCars4;
    myCars = myCars5;
     
    myCars3 = myCars;
    myCars3 = myCars4;
    myCars3 = myCars5;   
    